--- a/index.html
+++ b/index.html
@@ -27,36 +27,45 @@
           </div>
           <div class="singUpForm__form">
             <aside class="singUpForm__advertising">
-              <span class="bold">Try it free 7 days</span> then $20/mo.
-              thereafter
+              <p>
+                <span class="bold">Try it free 7 days</span> then $20/mo.
+                thereafter
+              </p>
             </aside>
             <div class="form">
-              <form action="#">
+              <form action="#" id="form">
                 <input
                   type="text"
                   name="name"
                   id="name"
                   placeholder="First Name"
+                  minlength="2"
+                  required
                 />
                 <input
                   type="text"
                   name="lastName"
                   id="lastName"
                   placeholder="Last Name"
+                  minlength="2"
+                  required
                 />
                 <input
                   type="email"
                   name="email"
                   id="email"
                   placeholder="Email Address"
+                  required
                 />
                 <input
                   type="password"
                   name="password"
                   id="password"
                   placeholder="Password"
+                  minlength="6"
+                  required
                 />
-                <button type="submit">Claim your free trial</button>
+                <button id="button" type="submit">Claim your free trial</button>
                 <p class="form__agreement">
                   By clicking the button, you are agreeing to our
                   <span class="bold red">Terms and Services</span>
@@ -66,16 +75,15 @@
           </div>
         </div>
       </section>
+      <footer>
+        <p class="attribution">
+          Challenge by
+          <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+            >Frontend Mentor</a
+          >. Coded by <a href="#">Your Name Here</a>.
+        </p>
+      </footer>
     </main>
-
-    <footer>
-      <p class="attribution">
-        Challenge by
-        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-          >Frontend Mentor</a
-        >. Coded by <a href="#">Your Name Here</a>.
-      </p>
-    </footer>
 
     <script src="./script.js"></script>
   </body>
