feat: add validation for form fields

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
               </p>
             </aside>
             <div class="form">
-              <form action="#" id="form" >
+              <form action="#" id="form" novalidate>
                 <div>
                   <input
                     type="text"
